--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -22,16 +22,16 @@
                <th>Depart date</th>
             </tr>
             <tr th:each ="emtySeat : ${emptySeats}"> 
-               <td th:utext="${emtySeat.trip.number}">...</td>
-               <td th:utext="${emtySeat.seat.type}">...</td>
-               <td th:utext="${emtySeat.seat.number}">...</td>
-               <td th:utext="${emtySeat.carriag.number}">...</td>
-               <td th:utext="${emtySeat.date}">...</td>
+               <td th:utext="${emtySeat.tripeNumber}">...</td>
+               <td th:utext="${emtySeat.seatType}">...</td>
+               <td th:utext="${emtySeat.seatNumber}">...</td>
+               <td th:utext="${emtySeat.carrNumber}">...</td>
+               <td th:utext="${emtySeat.depDate}">...</td>
             </tr>
          </table>
       </div>
 
 
-<!--<p th:text="'Congratulate well done , ' + ${name} + '!'" />
+<!--<p th:text="'Congratulate well done , ' + ${name} + '!'" />-->
 </body>
 </html>
